frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: logout-token-frontend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
  - host: logout-ui.180.210.83.161.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: logout-token-frontend-service
            port:
              number: 80
  tls:
  - hosts:
    - logout-ui.180.210.83.161.nip.io
    secretName: 180.210.83.161.nip.io-tls
